# inline-java

./: .bazelrc  .gitignore  .gitmodules  BUILD  BUILD.bazel  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Magic.hsc  Main.java  README.md  WORKSPACE  circle.yml  env-linear.sh  inline-java.cabal  nixpkgs.nix  set-java-home.sh  shell-linear-types.nix  shell-stack-linear-types.nix  shell-stack.nix  shell.nix  snapshot-9.0.1.yaml  snapshot-9.10.2.yaml  snapshot-9.6.4.yaml  snapshot-9.6.7.yaml  snapshot-9.8.4.yaml  stack-8.2.yaml  stack-HEAD.yaml  stack-linear.yaml  stack.yaml  wercker.yml
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/workflows/: buid-test-workflow.yaml  build.yml  master-buid-test-workflow.yaml
benchmarks/micro/: BUILD.bazel  Main.hs
benchmarks/wizzardo-http/: BUILD.bazel  README.md  Setup.hs  build.gradle  wizzardo-http-benchmark.cabal
benchmarks/wizzardo-http/src/: DbHandler.hs  DirectBuffer.hs  Main.hs
benchmarks/wizzardo-http/src/Language/Java/: Function.hs
benchmarks/wizzardo-http/src/Wizzardo/Http/: Handler.hs
benchmarks/wizzardo-http/src/main/haskell/: DbHandler.hs  Main.hs
benchmarks/wizzardo-http/src/main/haskell/Language/Java/: Function.hs
benchmarks/wizzardo-http/src/main/haskell/Wizzardo/Http/: Handler.hs
cbits/: bctable.c  bctable.h
config_settings/: setup.bzl
examples/classpath/: BUILD.bazel  Main.hs  README.md  build.gradle  classpath.cabal  settings.gradle
examples/classpath/src/main/java/: Classpath.java
examples/directory-server/: BUILD.bazel  LICENSE  README.md  directory-server.cabal
examples/directory-server/src/: server.hs
examples/directory-server/src/Directory/: Server.hs
examples/directory-server/src/Directory/Server/: Http.hs  Monad.hs
examples/directory-server/src/Directory/Server/Monad/: Classes.hs
examples/hello/: BUILD.bazel  LICENSE  README.md  hello-java.cabal  hello-java.hs  shell.nix  stack.yaml
jarify/: Jarify.hs  LICENSE  README.md  build.gradle  jarify.cabal  settings.gradle  shell.nix  stack.yaml
jarify/app/: Main.hs
jarify/apps/hello/: Hello.hs  hello.cabal
jarify/cbits/: bootstrap.c  io_tweag_jarify_Jarify.h
jarify/src/main/java/io/tweag/jarify/: Jarify.java  JarifyBase.java  JarifyMain.java
jni/: BUILD  BUILD.bazel  CHANGELOG.md  README.md  cat-tokens.sh  cpphs-cpp  jni.cabal  shell.nix  stack.yaml
jni/cat-tokens/: Main.hs
jni/exe/: jni-analyze.hs
jni/src/Foreign/: JNI.cpphs  JNI.hs
jni/src/Foreign/JNI/: Internal.hs  NativeMethod.hsc  OSThreads.hsc  String.hs  Trace.hs  Types.hs
jni/src/common/Foreign/: JNI.hs
jni/src/common/Foreign/JNI/: Internal.hs  String.hs  Types.hs  Unsafe.hs
jni/src/common/Foreign/JNI/Internal/: BackgroundWorker.hs  RWLock.hs
jni/src/common/Foreign/JNI/Unsafe/: Internal.hs  Introspection.hs
jni/src/common/Foreign/JNI/Unsafe/Internal/: Introspection.hs  JVM.hs
jni/src/head/Data/: Singletons.hs
jni/src/linear-types/Control/Monad/Lift/: Linear.hs
jni/src/linear-types/Data/: Singletons.hs
jni/src/linear-types/Foreign/JNI/: Safe.hs
jni/src/linear-types/Foreign/JNI/Types/: Safe.hs
jni/src/linear-types/System/IO/Linear/: Extras.hs
jni/tests/: BUILD.bazel  Main.hs
jni/tests/Foreign/: JNISpec.hs
jvm/: AUTHORS.md  BUILD.bazel  CHANGELOG.md  README.md  jvm.cabal  shell.nix  stack.yaml
jvm-batching/: BUILD.bazel  CHANGELOG.md  LICENSE  README.md  build.gradle  jvm-batching.cabal
jvm-batching/benchmarks/: BUILD.bazel  Main.hs
jvm-batching/src/Language/Java/: Batching.hs
jvm-batching/src/cabal/haskell/Language/Java/Batching/: Jars.hs
jvm-batching/src/main/haskell/Language/Java/: Batching.hs
jvm-batching/src/main/haskell/Language/Java/Batching/: Tuple.hs
jvm-batching/src/main/java/io/tweag/jvm/batching/: BatchReader.java  BatchReaders.java  BatchWriter.java  BatchWriters.java  Batcher.java  Batchers.java  Tuple2.java
jvm-batching/src/test/haskell/: BUILD.bazel  Main.hs  Spec.hs
jvm-batching/src/test/haskell/Language/Java/: BatchingSpec.hs
jvm-batching/tests/Language/Java/: BatchingSpec.hs
jvm-streaming/: BUILD  BUILD.bazel  CHANGELOG.md  LICENSE  README.md  Setup.hs  build.gradle  jvm-streaming.cabal
jvm-streaming/benchmarks/: BUILD.bazel  Bench.hs  Main.hs  MainBazel.hs
jvm-streaming/src/Language/Java/: Streaming.hs
jvm-streaming/src/cabal/haskell/Language/Java/Streaming/: Jars.hs
jvm-streaming/src/main/haskell/Language/Java/: Streaming.hs
jvm-streaming/src/test/haskell/: BUILD.bazel  Main.hs  MainBazel.hs
jvm-streaming/src/test/haskell/Language/Java/: StreamingSpec.hs
jvm-streaming/tests/Language/Java/: StreamingSpec.hs
jvm-types/: BUILD.bazel  CHANGELOG.md  README.md
jvm-types/src/main/haskell/Language/Java/SQL/: Time.hs
jvm-types/src/main/java/io/tweag/jvm/types/: BatchWriters.java
jvm-types/src/test/haskell/: BUILD.bazel  Main.hs
jvm-types/src/test/haskell/Language/Java/: TypesSpec.hs
jvm/benchmarks/: BUILD.bazel  Main.hs
jvm/src/Language/: Java.hs
jvm/src/Language/Java/: GlobalJ.hs  TH.hs
jvm/src/common/Language/: Java.hs
jvm/src/common/Language/Java/: Internal.hs  Unsafe.hs
jvm/src/linear-types/Language/Java/: Safe.hs
jvm/tests/: BUILD.bazel
jvm/tests/Language/: JavaSpec.hs
src/GhcPlugins/: Extras.hs
src/Language/Java/: Inline.hs
src/Language/Java/Inline/: Cabal.hs  Internal.hs  Magic.hs  Magic.hsc  Plugin.hs  Safe.hs
src/Language/Java/Inline/Internal/: Magic.hsc  QQMarker.hs
src/common/GhcPlugins/: Extras.hs
src/common/Language/Java/: Inline.hs
src/common/Language/Java/Inline/: Internal.hs  Magic.hsc  Plugin.hs  QQMarker.hs  Unsafe.hs
src/ghc-8.10/GhcPlugins/: Extras.hs
src/ghc-8.11/FastString/: Extras.hs
src/ghc-8.6/FastString/: Extras.hs
src/ghc-8.9/FastString/: Extras.hs
tests/: BUILD.bazel  SafeSpec.hs  Spec.hs
tests/Language/Java/: InlineSpec.hs
tests/Language/Java/Inline/: SafeSpec.hs
tests/common/: Main.hs
tests/common/Language/Java/: InlineSpec.hs
tests/linear-types/: SafeSpec.hs
tests/linear-types/Language/Java/Inline/: SafeSpec.hs
tests/no-linear-types/: SafeSpec.hs
(+8 files in other folders)
