load(
    "@rules_haskell//haskell:defs.bzl",
    "ghc_plugin",
    "haskell_binary",
    "haskell_library",
    "haskell_test",
    "haskell_toolchain_library",
)

exports_files(["nixpkgs.nix"])

cc_library(
    name = "bctable",
    srcs = ["cbits/bctable.c"],
    hdrs = ["cbits/bctable.h"],
    strip_include_prefix = "cbits",
)

haskell_toolchain_library(name = "base")
haskell_toolchain_library(name = "bytestring")

haskell_library(
    name = "inline-java",
    # cbits/bctable.h is included here so it can be found by Plugin.hs
    # at the same location when building with bazel as with stack.
    srcs = [
        "cbits/bctable.h",  # keep
        "Magic.hsc",
    ],
    ghcopts = ["-DVERSION_inline_java=\"0.10.0\""],
    version = "0.10.0",
    visibility = ["//visibility:public"],
    deps = [
        ":bctable",  # keep
        ":base",
        ":bytestring",
    ],
)
