name:                inline-java
version:             0.9.0
synopsis:            Java interop via inline Java code in Haskell modules.
description:         Please see README.md.
homepage:            http://github.com/tweag/inline-java#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          m@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  CHANGELOG.md
  README.md
extra-tmp-files:
  src/Foreign/JNI.c

source-repository head
  type:     git
  location: https://github.com/tweag/inline-java

flag linear-types
  description: Build the linear types interface.
  default: False

library
  hs-source-dirs: src/common
  if impl(ghc >= 8.11)
    hs-source-dirs: src/ghc-8.11
  else
    hs-source-dirs: src/ghc-8.10
  c-sources: cbits/bctable.c
  cc-options: -std=c99 -Wall -Werror
  include-dirs: cbits/
  includes: bctable.h
  install-includes: bctable.h
  exposed-modules:
    Language.Java.Inline
    Language.Java.Inline.Cabal
    Language.Java.Inline.Internal
    Language.Java.Inline.Internal.Magic
    Language.Java.Inline.Internal.QQMarker
    Language.Java.Inline.Internal.QQMarker.Names
    Language.Java.Inline.Plugin
    Language.Java.Inline.Unsafe
  other-modules:
    GhcPlugins.Extras
    FastString.Extras
  build-depends:
    -- Can't build at all with GHC < 8.0.2.
    base >=4.14.0.0 && <5,
    bytestring >=0.10,
    Cabal >=1.24.2,
    directory >=1.2,
    filepath >=1,
    ghc >=8.10.1 && <=8.11,
    jni >=0.7 && <0.8,
    jvm >=0.5 && <0.6,
    language-java >=0.2,
    mtl >=2.2.1,
    process >=1.2,
    text >=1.2,
    template-haskell >=2.10,
    temporary >=1.2
  default-language: Haskell2010
  if flag(linear-types)
    hs-source-dirs: src/linear-types
    exposed-modules:
      Language.Java.Inline.Safe
      Language.Java.Inline.Internal.QQMarker.Safe
    build-depends:
      linear-base ==0.1.0.0
  else
    hs-source-dirs: src/no-linear-types

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs: tests/common
  main-is: Main.hs
  other-modules:
    SafeSpec
    Spec
    Language.Java.InlineSpec
  build-depends:
    base,
    jni,
    jvm,
    hspec,
    inline-java,
    text
  default-language: Haskell2010
  cpp-options: -DHSPEC_DISCOVER=hspec-discover
  if flag(linear-types)
    hs-source-dirs: tests/linear-types
    other-modules:
      Language.Java.Inline.SafeSpec
    build-depends:
      linear-base ==0.1.0.0
  else
    hs-source-dirs: tests/no-linear-types

benchmark micro-benchmarks
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmarks/micro
  build-depends:
    base >=4.8 && <5,
    criterion,
    deepseq >=1.4.2,
    inline-java,
    jni,
    jvm,
    singletons
  default-language: Haskell2010
  ghc-options: -threaded
