name:                inline-java
version:             0.10.0
synopsis:            Java interop via inline Java code in Haskell modules.
description:         Please see README.md.
homepage:            http://github.com/tweag/inline-java#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          m@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       2.0
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tweag/inline-java

library
  hs-source-dirs: src
  c-sources: cbits/bctable.c
  cc-options: -std=c99 -Wall -Werror
  include-dirs: cbits/
  includes: bctable.h
  install-includes: bctable.h
  exposed-modules:
    Language.Java.Inline.Internal.Magic
  other-modules:
    GhcPlugins.Extras
  build-depends:
    base >=4.14.0.0 && <5,
    bytestring >=0.10,
    template-haskell >=2.10,
  default-language: Haskell2010
