name:                jarify
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          felix.raimundo@tweag.io
copyright:           2017 EURL Tweag
category:            FFI, JVM, Java, Distributed Computing
build-type:          Custom
extra-source-files:
  src/main/java/io/tweag/sparkle/Sparkle.java
  src/main/java/io/tweag/sparkle/SparkMain.java
  src/main/java/io/tweag/sparkle/function/HaskellVoidFunction.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction4.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction0.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction2.java
  src/main/java/io/tweag/sparkle/function/HaskellFlatMapFunction.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction3.java
  src/main/java/io/tweag/sparkle/function/HaskellFunction.java
  src/main/java/Helper.java
cabal-version:       >=1.10

executable jarify
  main-is: app/Main.hs
  other-modules: Paths_jarify
  build-depends:
    base >= 4.8 && < 5,
    bytestring >= 0.10,
    filepath >= 1.4,
    process >= 1.2,
    regex-tdfa >= 1.2,
    sparkle,
    text >= 1.2,
    zip-archive >= 0.2
  default-language: Haskell2010
  ghc-options: -threaded

test-suite jarify-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , jarify
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/jarify
