name:                jarify
version:             0.1
synopsis:            Jarification of Haskell sources
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          felix.raimundo@tweag.io
copyright:           2017 EURL Tweag
category:            FFI, JVM, Java
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:
  src/main/java/io/tweag/jarify/Jarify.java
  src/main/java/io/tweag/jarify/JarifyBase.java
  src/main/java/io/tweag/jarify/JarifyMain.java
data-dir: build/libs
data-files: stub.jar

source-repository head
  type:     git
  location: https://github.com/tweag/inline-java
  subdir:   jarify

library
  include-dirs: cbits
  c-sources: cbits/bootstrap.c
  cc-options: -Wall -Werror
  build-depends: base >=4.8 && <5
  hs-source-dirs: src
  default-language: Haskell2010

executable jarify
  main-is: Jarify.hs
  other-modules: Paths_jarify
  build-depends:
    base >= 4.8 && < 5,
    bytestring >= 0.10,
    filepath >= 1.4,
    process >= 1.2,
    regex-tdfa >= 1.2,
    text >= 1.2,
    zip-archive >= 0.2
  default-language: Haskell2010
  ghc-options: -threaded
