load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
)

haskell_library(
    name = "jni",
    srcs = glob(['src/common/**/*.hs', 'src/common/**/*.hsc']),
    deps = [
        "@openjdk//:lib",
        "@stackage//:async",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:choice",
        "@stackage//:containers",
        "@stackage//:constraints",
        "@stackage//:deepseq",
        "@stackage//:inline-c",
        "@stackage//:singletons",
    ],
    visibility = ["//visibility:public"],
)
