name:                jni
version:             0.9.0
synopsis:            Complete JNI raw bindings.
description:         Please see README.md.
homepage:            https://github.com/tweag/inline-java/tree/master/jni#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          m@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       2.0
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/tweag/inline-java
  subdir: jni

Flag android
  Description:   Turn on JNI Android compatibility
  Default:       False

library
  hs-source-dirs: src/common src/linear-types
  cc-options: -std=c11
  if flag(android)
    cpp-options: -DANDROID
  extra-libraries: jvm
  exposed-modules:
    Foreign.JNI
    Foreign.JNI.Types
    Foreign.JNI.String
    Foreign.JNI.Internal
    Foreign.JNI.Internal.BackgroundWorker
    Foreign.JNI.Internal.RWLock
    Foreign.JNI.NativeMethod
    Foreign.JNI.Safe
    Foreign.JNI.Types.Safe
    Foreign.JNI.Unsafe
    Foreign.JNI.Unsafe.Internal
    Foreign.JNI.Unsafe.Internal.Introspection
  build-depends:
    async >=2.2.2,
    base >=4.14 && <5,
    bytestring >=0.10,
    choice >=0.2.0,
    containers >=0.5,
    constraints >=0.8,
    deepseq >=1.4.2,
    inline-c >=0.6,
    linear-base >=0.5 && <0.6,
    singletons-base >=3.4,
    stm >= 2.3,
    text >= 1.2.3
  default-language: Haskell2010
  -- XXX issues with CPP make more convenient using
  -- a custom preprocessor to deal with concatenation.
  -- See jni/cat-tokens/Main.hs.
  cpp-options: -DJNI_CAT_TOKENS_PATH=cat-tokens
  build-tool-depends:
    jni:cat-tokens

executable cat-tokens
  hs-source-dirs: cat-tokens
  main-is: Main.hs
  build-depends:
    base,
    bytestring
  default-language: Haskell2010

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Foreign.JNISpec
    Spec
  build-depends:
    base,
    hspec,
    singletons-base,
    jni
  default-language: Haskell2010
  extra-libraries: pthread
  ghc-options: -threaded
  cpp-options: -DHSPEC_DISCOVER_HSPEC_DISCOVER_PATH=hspec-discover
  build-tool-depends:
    hspec-discover:hspec-discover
