load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
  "haskell_test",
)

java_library(
    name = "jar",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
)

haskell_library(
    name = "jvm-batching",
    srcs = glob(['src/main/haskell/**/*.hs']),
    visibility = ["//visibility:public"],
    plugins = ["//:inline-java-plugin"],
    deps = [
        ":jar",
        "//jni",
        "//jvm",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:distributed-closure",
        "@stackage//:exceptions",
        "@stackage//:singletons",
        "@stackage//:text",
        "@stackage//:vector",
    ],
)
