load(
  "@io_tweag_rules_haskell//haskell:haskell.bzl",
  "haskell_library",
)

haskell_library(
    name = "jvm-streaming",
    srcs = glob(['src/main/haskell/**/*.hs']),
    visibility = ["//visibility:public"],
    plugins = ["//:inline-java-plugin"],
    deps = [
        "//jvm-batching:jar",
        "//jni",
        "//jvm",
        "//jvm-batching",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:distributed-closure",
        "@stackage//:singletons",
        "@stackage//:streaming",
        "@stackage//:vector",
    ],
)
