load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)
load("@config_settings//:info.bzl", "ghc_version")

haskell_library(
    name = "jvm-streaming",
    srcs = glob(['src/main/haskell/**/*.hs']),
    visibility = ["//visibility:public"],
    plugins = ["//:inline-java-plugin"],
    deps = [
        "//jvm-batching:jar",
        "//jni",
        "//jvm",
        "//jvm-batching",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:distributed-closure",
        "@stackage//:streaming",
        "@stackage//:vector",
    ] +
    (["@stackage//:singletons"] if ghc_version == "8.10.2" else []),
)
