name:                jvm-streaming
version:             0.1
synopsis:            Expose Java iterators as streams from the streaming package.
description:         Please see README.md.
homepage:            http://github.com/tweag/inline-java/tree/master/jvm-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          m@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/tweag/inline-java
  subdir: jvm-streaming

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Language.Java.Streaming
  build-depends:
    base >= 4.7 && < 5,
    distributed-closure >= 0.3,
    jni >= 0.2.1,
    jvm >= 0.1,
    inline-java >= 0.6,
    singletons >= 2.2,
    streaming >= 0.1.4

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: Main.hs
  other-modules:
    Language.Java.StreamingSpec
    Spec
  build-depends:
    base,
    hspec,
    inline-java,
    jvm,
    jvm-streaming,
    streaming
  default-language: Haskell2010
  extra-libraries: pthread
