name:                jvm-streaming
version:             0.3
synopsis:            Expose Java iterators as streams from the streaming package.
description:         Please see README.md.
homepage:            http://github.com/tweag/inline-java/tree/master/jvm-streaming#readme
license:             BSD3
license-file:        LICENSE
author:              Tweag I/O
maintainer:          m@tweag.io
copyright:           2015-2016 EURL Tweag.
category:            FFI, JVM, Java
build-type:          Custom
cabal-version:       >=1.10
extra-source-files:  README.md

source-repository head
  type: git
  location: https://github.com/tweag/inline-java
  subdir: jvm-streaming

custom-setup
  setup-depends:
    base,
    Cabal >= 1.24,
    inline-java >= 0.6.3,
    jvm-batching >= 0.1 && <0.2

library
  hs-source-dirs: src/main/haskell src/cabal/haskell
  default-language: Haskell2010
  exposed-modules:
    Language.Java.Streaming
    Language.Java.Streaming.Jars
  build-depends:
    base >= 4.7 && < 5,
    distributed-closure >= 0.3,
    jni >= 0.4.0 && <0.7,
    jvm >= 0.4.0 && <0.5,
    jvm-batching >= 0.1 && <0.2,
    inline-java >= 0.8 && <0.9,
    singletons >= 2.2,
    streaming >= 0.1.4,
    vector

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs: src/test/haskell
  main-is: Main.hs
  other-modules:
    Language.Java.StreamingSpec
    Spec
  build-depends:
    base,
    hspec,
    inline-java,
    jvm,
    jvm-streaming,
    streaming
  default-language: Haskell2010

benchmark micro-benchmarks
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmarks
  build-depends:
    base >=4.8 && <5,
    criterion,
    deepseq,
    jvm,
    jvm-streaming,
    streaming,
    vector
  default-language: Haskell2010
  ghc-options: -threaded
