load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

java_library(
    name = "jar",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = ["//jvm-batching:jar"],
    visibility = ["//visibility:public"],
)

haskell_library(
    name = "jvm-types",
    srcs = glob(['src/main/haskell/**/*.hs']),
    visibility = ["//visibility:public"],
    plugins = ["//:inline-java-plugin"],
    deps = [
        ":jar",
        "//jni",
        "//jvm",
        "//jvm-batching",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:distributed-closure",
        "@stackage//:singletons",
        "@stackage//:streaming",
        "@stackage//:time",
        "@stackage//:vector",
    ],
    tags = ["skip_with_ghc_9_0_1"],
)
