load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)
load("@config_settings//:info.bzl", "ghc_version")

java_library(
    name = "jar",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = ["//jvm-batching:jar"],
    visibility = ["//visibility:public"],
)

haskell_library(
    name = "jvm-types",
    srcs = glob(['src/main/haskell/**/*.hs']),
    visibility = ["//visibility:public"],
    plugins = ["//:inline-java-plugin"],
    deps = [
        ":jar",
        "//jni",
        "//jvm",
        "//jvm-batching",
        "//:inline-java",
        "@stackage//:base",
        "@stackage//:distributed-closure",
        "@stackage//:streaming",
        "@stackage//:time",
        "@stackage//:vector",
    ] +
    (["@stackage//:singletons"] if ghc_version == "8.10.1" else []),
)
