load(
    "@rules_haskell//haskell:defs.bzl",
    "haskell_library",
)

java_library(
    name = "jar",
    srcs = glob(["src/main/java/**/*.java"]),
    visibility = ["//visibility:public"],
    deps = ["//jvm-batching:jar"],
)

haskell_library(
    name = "jvm-types",
    srcs = glob(["src/main/haskell/**/*.hs"]),
    plugins = ["//:inline-java-plugin"],
    visibility = ["//visibility:public"],
    deps = [
        ":jar",
        "//:inline-java",
        "//jni",
        "//jvm",
        "//jvm-batching",
        "@stackage//:base",
        "@stackage//:distributed-closure",
        "@stackage//:singletons",
        "@stackage//:streaming",
        "@stackage//:time",
        "@stackage//:vector",
    ],
)
