load(
  "@rules_haskell//haskell:defs.bzl",
  "haskell_library",
)

haskell_library(
    name = "jvm",
    srcs = glob(['src/common/**/*.hs']),
    deps = [
        "//jni",
        "@stackage//:base",
        "@stackage//:bytestring",
        "@stackage//:constraints",
        "@stackage//:choice",
        "@stackage//:distributed-closure",
        "@stackage//:exceptions",
        "@stackage//:singletons",
        "@stackage//:template-haskell",
        "@stackage//:text",
        "@stackage//:vector",
    ],
    visibility = ["//visibility:public"],
)
